@@ -9,6 +9,8 @@ BUGFIXES
 | VERSION: 0.4.5        |
 +-----------------------+
 BUGFIXES
+20-07-05    Implemented boundary checks for section edit
+20-07-05    Removed shop-related sections from mysql data
 17-07-05    Fixed sections listed in blocks mgr, 'none' now correctly reads
             'all sections'
 
